@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Don&apos;t include external tasks into drop down list for parent tasks.
 * [jan] Fix redirecting to task list after completing a task (Bug #14678).
  </notes>
  <contents>
@@ -1814,6 +1815,7 @@
    <date>2017-08-01</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Don&apos;t include external tasks into drop down list for parent tasks.
 * [jan] Fix redirecting to task list after completing a task (Bug #14678).
    </notes>
   </release>
