@@ -2,6 +2,7 @@
 v4.2.16-git
 -----------
 
+[jan] Don't include external tasks into drop down list for parent tasks.
 [jan] Fix redirecting to task list after completing a task (Bug #14678).
 
 
